Added deals data and some refactoring

--- a/index.html
+++ b/index.html
@@ -1042,19 +1042,19 @@
        <div class="filter-container">
          <div class="filter">
            <input type="checkbox" id="vegeterian">
-           <label>ЗА ВЕГЕТАРИАНЦИ</label>
+           <label for="vegeterian">ЗА ВЕГЕТАРИАНЦИ</label>
          </div>
          <div class="filter">
           <input type="checkbox" id="hotP">
-          <label>ПИКАНТНО</label>
+          <label for="hotP">ПИКАНТНО</label>
         </div>
         <div class="filter">
           <input type="checkbox" id="leanP">
-          <label>ПОСТНИ</label>
+          <label for="leanP">ПОСТНИ</label>
         </div>
         <div class="filter">
           <input type="checkbox" id="new_p">
-          <label>НОВО</label>
+          <label for="new_p">НОВО</label>
         </div>
        </div>
     {{/ifCond}}
@@ -1062,11 +1062,11 @@
       <div class="filter-container">
         <div class="filter">
         <input type="checkbox" id="vegeterianStarters">
-        <label>ЗА ВЕГЕТАРИАНЦИ</label>
+        <label for="vegeterianStarters">ЗА ВЕГЕТАРИАНЦИ</label>
       </div>
      <div class="filter">
        <input type="checkbox" id="newStarters">
-       <label>НОВО</label>
+       <label for="newStarters">НОВО</label>
      </div>
     </div>
     {{/ifCond}}
@@ -1074,11 +1074,11 @@
      <div class="filter-container">
        <div class="filter">
         <input type="checkbox" id="spicyPasta">
-        <label>ПИКАНТНО</label>
+        <label for="spicyPasta">ПИКАНТНО</label>
       </div>
       <div class="filter">
         <input type="checkbox" id="newPasta">
-        <label>НОВО</label>
+        <label for="newPasta">НОВО</label>
       </div>
      </div>
    {{/ifCond}}
@@ -1086,11 +1086,11 @@
      <div class="filter-container">
        <div class="filter">
         <input type="checkbox" id="spicySauces">
-        <label>ПИКАНТНО</label>
+        <label for="spicySauces">ПИКАНТНО</label>
        </div>
      <div class="filter">
        <input type="checkbox" id="newSauces">
-       <label>НОВО</label>
+       <label for="newSauces" >НОВО</label>
       </div>
     </div>
    {{/ifCond}}
@@ -1098,11 +1098,11 @@
      <div class="filter-container">
        <div class="filter">
         <input type="checkbox" id="desserts">
-        <label>ДЕСЕРТИ</label>
+        <label for="desserts">ДЕСЕРТИ</label>
        </div>
      <div class="filter">
        <input type="checkbox" id="icecreams">
-       <label>СЛАДОЛЕДИ</label>
+       <label for="icecreams">СЛАДОЛЕДИ</label>
       </div>
     </div>
    {{/ifCond}}
@@ -1128,6 +1128,7 @@
     <script src="./assets/script/data/allSandwichData.js"></script>
     <script src="./assets/script/data/allSaucesData.js"></script>
     <script src="./assets/script/data/allStartersData.js"></script>
+    <script src="./assets/script/data/allDealsData.js"></script>
 
     <!-- Structure classes -->
     <script src="./assets/script/models/ProductModel.js"></script>
