--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
                 id="fName"
                 class="rounded"
                 required
+                pattern=".{3,}" title="Three or more characters"
               />
             </div>
             <div class="text-col">
@@ -550,6 +551,7 @@
                 id="lName"
                 class="rounded"
                 required
+                pattern=".{3,}" title="Three or more characters"
               />
             </div>
           </div>
@@ -560,6 +562,7 @@
             id="regEmail"
             class="rounded"
             required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
           />
           <label for="regPass" class="inline-block">ПАРОЛА *</label>
           <input
@@ -568,6 +571,7 @@
             id="regPass"
             class="rounded"
             required
+            pattern=".{6,}" title="Six or more characters"
           />
           <label for="confirm" class="inline-block">ПОТВЪРДИ ПАРОЛАТА *</label>
           <input
@@ -576,6 +580,7 @@
             id="confirm"
             class="rounded"
             required
+            pattern=".{6,}" title="Six or more characters"
           />
           <label for="pData" class="flex check">
             <input
@@ -629,6 +634,7 @@
               използваме предоставените от Вас данни за връзка.
             </span>
           </label>
+          <span id="regError" class="error_message error-txt">Невалидни данни</span>
           <div class="flex end">
             <input
               type="submit"
@@ -742,102 +748,6 @@
 
     <div id="modalBackdrop" class="modal-backdrop modal-fade"></div>
 
-    <script id="simpleProduct" type="text/x-handlebars-template">
-      {{#if this}}
-        {{#each this}}
-          <article id="{{this.id}}" class="card rounded simple-card {{this.category}}-card">
-            {{#ifCond this.tags.length '>' 0}}
-              <div class="card-tags-wrapper">
-                {{#each this.tags}}
-                  {{#ifCond this '===' 'ПИКАНТНО'}}
-                    <div class="tooltip">
-                      <img class="card-tag" src="./assets/images/tags/hot.svg" alt="spicy">
-                      <span class="tooltiptext">{{this}}</span>
-                    </div>
-                  {{/ifCond}}
-                  {{#ifCond this '===' 'ЗА ВЕГЕТАРИАНЦИ'}}
-                    <div class="tooltip">
-                      <img class="card-tag" src="./assets/images/tags/vegeterian.svg" alt="vegeterian">
-                      <span class="tooltiptext">{{this}}</span>
-                    </div>
-                  {{/ifCond}}
-                  {{#ifCond this '===' 'ПОСТНИ'}}
-                    <div class="tooltip">
-                      <img class="card-tag" src="./assets/images/tags/fasting.svg" alt="vegan">
-                      <span class="tooltiptext">{{this}}</span>
-                    </div>
-                  {{/ifCond}}
-                  {{#ifCond this '===' 'НОВО'}}
-                    <div class="tooltip">
-                      <img class="card-tag" src="./assets/images/tags/new_bg.svg" alt="new">
-                      <span class="tooltiptext">{{this}}</span>
-                    </div>
-                  {{/ifCond}}
-                {{/each}}
-              </div>
-            {{/ifCond}}
-            <div class="title-wrapper">
-              {{#ifCond this.title.length '>' 24}}
-                <h2 class="ellipsis">{{this.title}}</h2>
-                <h2 class="name-scroll">{{this.title}}</h2>
-              {{else}}
-                <h2>{{this.title}}</h2>
-              {{/ifCond}}
-            </div>
-            {{#ifCond this.category '!==' 'drink'}}
-              <p class="product-description">
-                {{this.description}}
-              </p>
-            {{/ifCond}}
-            <img class="product-picture {{this.category}}-img" src="./assets/images/{{this.image}}" alt="{{this.title}}" />
-            <div class="btn-wrapper">
-              <button class="green-button button rounded">ИЗБЕРЕТЕ</button>
-            </div>
-            <section class="slide-up closed flex column space-between">
-              {{#ifCond this.category '!==' 'drink'}}
-                <div class="weight-container">
-                  <span class="border"></span>
-                  <div class="weight-center">
-                    <div class="weight">{{this.weight}}g</div>
-                  </div>
-                  <span class="border"></span>
-                </div>
-              {{/ifCond}}
-              {{#ifCond this.types.length '>' 0}}
-                <div class="select-wrapper">
-                  <select name="productTypes" class="productTypes">
-                    {{#each this.types}}
-                      <option value="{{@index}}">{{this}}</option>
-                    {{/each}}
-                  </select>
-                </div>
-              {{/ifCond}}
-              <div class="details">
-                <div class="card-quantity">
-                  <p>КОЛИЧЕСТВО</p>
-                  <div class="quantity-wrapper">
-                    <img class="minus quantity-controller" alt="minus" src="assets/images/minus.svg">
-                    <span class="quantity-number">1</span>
-                    <img class="plus quantity-controller" alt="plus" src="assets/images/plus.svg">
-                  </div>
-                </div>
-                <div class="card-price">
-                  <p>ЦЕНА</p>
-                    {{#ifCond this.category '===' 'drink'}}
-                      <p class="price-sum">{{this.price.[0]}}лв</p>
-                    {{else}}
-                      <p class="price-sum">{{this.price}}лв</p>
-                    {{/ifCond}}
-                </div>
-              </div>
-              <button class="addBtn green-button button rounded">ДОБАВИ</button>
-            </section>
-          </article>
-        {{/each}}
-      {{/if}}
-    </script>
-
-
     <script id="customizableProduct" type="text/x-handlebars-template">
       {{#if this}}
         {{#each this}}
@@ -910,12 +820,12 @@
       <div class="container-complex-card">
         <div class="box-wrapper">
           <div class="product-image" style="background-image: url(assets/images/{{this.image}});"></div>
-        <h2 class="product-title">
-          <span class="decoration-title red-decoration-title">{{this.title}}</span>
-        </h2>
-        <div class="dots-seperator"></div>
-        <div class="product-wrapper">
-        <div class="product-wrapper-left">
+          <h2 class="product-title">
+            <span class="decoration-title red-decoration-title">{{this.title}}</span>
+          </h2>
+          <div class="dots-seperator"></div>
+          <div class="product-wrapper">
+          <div class="product-wrapper-left">
           {{#ifCond this.category '===' "pizza" }}
            <div class="form-group size">
              <label for="pizza-size">ГОЛЕМИНА</label>
@@ -945,9 +855,6 @@
             <p class="pull-left font-bold">Продукти</p>
             <!-- array from ingredients -->
             <div class="ingredients">
-              <!-- {{#each this.ingredients}}
-              <span class="product-ingredient">{{this}} </span>
-              {{/each}} -->
               {{this.stringifiedIngredients}}
             </div>
           </div>
@@ -994,6 +901,10 @@
           <div class="rounded-center"></div>
           <div class="rounded-right"></div>
         </div>
+    </div>
+    </div>
+    <div class="custom-ingredients">
+      {{{printProductIngredients this}}}
     </div>
   {{/if}}
   </script>
