Designed the deals card

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             </div>
           </div>
         </nav>
-        <div id="allDealsPage" class="card-container main-wrapper">
+        <div id="allDealsPage" class="card-container-deal main-wrapper">
         </div>
         <div id="allPizzasPage">
           <div id="filter-pizza" class="filter-category" ></div>
@@ -1121,7 +1121,7 @@
             <p class="product-description">
                 {{this.description}}
             </p>
-            <div class="btn-wrapper">
+            <div class="btn-wrapper" id="deals-button">
               <button class="green-button button rounded">ИЗБЕРЕТЕ</button>
             </div>
             <div class="delivery-carryout">
