Added the styles for the custom ingredients

--- a/index.html
+++ b/index.html
@@ -903,8 +903,13 @@
         </div>
     </div>
     </div>
-    <div class="custom-ingredients">
+    <div class="toppings-wrapper">
+      <h2 class="text-center white-txt">
+        <span class="decoration-title white-decoration-title">ПРОДУКТИ - {{this.title}}</span>
+      </h2>
+      <div class="toppings-container main-wrapper">
       {{{printProductIngredients this}}}
+      </div>
     </div>
   {{/if}}
   </script>
