Added the custom ingredient adding and removing functionality

--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
            <div class="sub_toppings_container">
             <p class="pull-left font-bold">Продукти</p>
             <!-- array from ingredients -->
-            <div class="ingredients">
+            <div id="strIngredientContainer" class="ingredients">
               {{this.stringifiedIngredients}}
             </div>
           </div>
