--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
       <!-- a placeholder for the header -->
       <div id="placeholder"></div>
       <div id="menuPage">
+        <div id="stepper-container">
+          <div id="stepper"></div>
+        </div>
         <nav id="menuNav">
           <div id="filter-bar">
             <div class="menu-container">
