Added checkout page preview on hover

--- a/index.html
+++ b/index.html
@@ -132,6 +132,12 @@
                   alt="Basket Icon"
                 />
                 <span id="orderNumber" class="order-num">0</span>
+                <div id="cartPreview" class="cart-preview flex column fade-in">
+                  <div class="arrow-container">
+                    <div class="arrow"></div>
+                  </div>
+                  <div id="cartContent"></div>
+                </div>
               </li>
               <li id="loggedIn">
                 <div class="login-container">
