--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
                 {{this.description}}
             </p>
             <div class="btn-wrapper" id="deals-button">
-              <button class="green-button button rounded">ИЗБЕРЕТЕ</button>
+              <button class="green-button button rounded addButton">ИЗБЕРЕТЕ</button>
             </div>
             <div class="delivery-carryout">
               <div>
