Fixed drink price bug, pizza price bug and small refactoring

--- a/index.html
+++ b/index.html
@@ -910,11 +910,16 @@
     <script src="./assets/script/classes/StarterService.js"></script>
 
     <script src="./assets/script/classes/UserService.js"></script>
-    <script src="./assets/script/menuController.js"></script>
-    <script src="./assets/script/modalController.js"></script>
-    <script src="./assets/script/checkoutController.js"></script>
-    <script src="./assets/script/productsController.js"></script>
-    <script src="./assets/script/userController.js"></script>
+
+    <!-- Controllers -->
+    <script src="./assets/script/controllers/checkoutController.js"></script>
+    <script src="./assets/script/controllers/customizableProductPageController.js"></script>
+    <script src="./assets/script/controllers/simpleProductController.js"></script>
+    <script src="./assets/script/controllers/productsController.js"></script>
+    <script src="./assets/script/controllers/menuController.js"></script>
+    <script src="./assets/script/controllers/modalController.js"></script>
+    <script src="./assets/script/controllers/userController.js"></script>
+
     <script src="./assets/script/index.js"></script>
   </body>
 </html>
