--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/styles/reset.css" />
+    <link rel="stylesheet" href="./assets/styles/utils.css" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <link
       rel="stylesheet"
@@ -55,7 +56,7 @@
                 src="./assets/images/basket.svg"
                 alt="Basket Icon"
               />
-              <span id="orderNumberResponsive" class="order-num">0</span>
+              <span id="orderNumberResponsive" class="order-num text-bold">0</span>
             </div>
           </div>
           <div class="navbar-collapse" id="navigation">
@@ -120,7 +121,7 @@
               <li id="orderNowBtn">
                 <a
                   href="#allDeals"
-                  class="button font-bold cart-btn text-center"
+                  class="button font-bold cart-btn text-white text-center rounded"
                   data-type="order"
                   >ПОРЪЧАЙ СЕГА</a
                 >
@@ -131,7 +132,7 @@
                   src="./assets/images/basket.svg"
                   alt="Basket Icon"
                 />
-                <span id="orderNumber" class="order-num">0</span>
+                <span id="orderNumber" class="order-num text-bold">0</span>
                 <div id="cartPreview" class="cart-preview flex column fade-in">
                   <div class="arrow-container">
                     <div class="arrow"></div>
@@ -815,7 +816,7 @@
        </div>
      <div class="filter">
        <input type="checkbox" id="newSauces">
-       <label for="newSauces" >НОВО</label>
+       <label for="newSauces">НОВО</label>
       </div>
     </div>
    {{/ifCond}}
