More CSS refactoring

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             </div>
             <div id="cartIconResponsive" class="cart-icon responsive-hidden hidden">
               <img
-                class="cursor-pointer"
+                class="pointer"
                 src="./assets/images/basket.svg"
                 alt="Basket Icon"
               />
-              <span id="orderNumberResponsive" class="order-num text-bold">0</span>
+              <span id="orderNumberResponsive" class="order-num text-bold text-white">0</span>
             </div>
           </div>
           <div class="navbar-collapse" id="navigation">
@@ -128,7 +128,7 @@
               </li>
               <li id="cartIcon" class="cart-icon responsive-hidden hidden">
                 <img
-                  class="cursor-pointer"
+                  class="pointer"
                   src="./assets/images/basket.svg"
                   alt="Basket Icon"
                 />
@@ -143,7 +143,7 @@
               <li id="loggedIn">
                 <div class="login-container">
                   <img src="./assets/images/account_avatar_icon.svg" alt="profile">
-                  <span id="avatar-txt" class="visible-resposnsive text-bold">PROFILE</span>
+                  <span id="avatar-txt" class="visible-resposnsive font-bold">PROFILE</span>
                 </div>
                 <div id="profileDropdown" class="dropdown-container flex column hidden">
                   <div class="arrow-container">
